<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Image + Chip overlay -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/recipe_details_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipeHealthCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_chip_healthy"
            android:fontFamily="@font/hanken_grotesk_bold"
            android:text="@string/recipe_details_health_category"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/recipeImage"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hanken_grotesk_bold"
                android:text="@string/recipe_details_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="1dp" />

            <!-- Likes chip -->
            <TextView
                android:id="@+id/recipeLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_chip_lovin_it"
                android:fontFamily="@font/hanken_grotesk_bold"
                android:text="@string/recipe_likes"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/recipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/hanken_grotesk"
            android:text="@string/recipe_details_desc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recipeServing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/hanken_grotesk"
            android:text="@string/recipe_details_serving"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hanken_grotesk_bold"
            android:text="@string/recipe_details_nutrition_info"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- Nutrition info horizontal -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="#1A000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk_bold"
                        android:text="@string/recipe_details_cals"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/recipeCaloriesPerServing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk_bold"
                        android:text="@string/recipe_details_calories"
                        android:textColor="#FF7A00"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk_bold"
                        android:text="@string/recipe_details_c"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/recipeCarbsPerServing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk"
                        android:text="@string/recipe_details_carbs"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk_bold"
                        android:text="@string/recipe_details_p"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/recipeProteinPerServing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk"
                        android:text="@string/recipe_details_protein"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Fat -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk_bold"
                        android:text="@string/recipe_details_f"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/recipeFatPerServing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hanken_grotesk"
                        android:text="@string/recipe_details_fat"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Ingredients -->
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hanken_grotesk_bold"
            android:text="@string/recipe_details_ingredients"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="#1A000000"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/recipeIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/hanken_grotesk"
                android:text="@string/ingredients_bulleted"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>

        <!-- Instructions -->
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hanken_grotesk_bold"
            android:text="@string/recipe_details_instructions"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="#1A000000"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/recipeInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/hanken_grotesk"
                android:text="@string/instructions_bulleted"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>
