<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/hanken_grotesk_bold"
        android:text="@string/meal_details_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/hanken_grotesk"
        android:text="@string/meal_details_delete_meal"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/hanken_grotesk_bold"
        android:text="@string/meal_details_meal_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodName"
        app:strokeColor="#1A000000"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:text="@string/meal_details_cals"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_details_calories"
                    android:textColor="#FF7A00"
                    android:textSize="32sp"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:text="@string/meal_details_c"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCarbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_details_carbs"
                    android:textSize="20sp"
                    android:fontFamily="@font/hanken_grotesk"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:text="@string/meal_details_p"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvProtein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_details_protein"
                    android:textSize="20sp"
                    android:fontFamily="@font/hanken_grotesk"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:text="@string/meal_details_f"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_details_fat"
                    android:textSize="20sp"
                    android:fontFamily="@font/hanken_grotesk"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtWeight"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/edtWeight"
        app:layout_constraintTop_toTopOf="@+id/edtWeight"
        app:srcCompat="@drawable/ic_pencil" />

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border_comment"
        android:ems="10"
        android:fontFamily="@font/hanken_grotesk"
        android:text="@string/meal_details_weight"
        android:inputType="number"
        android:paddingHorizontal="60dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <EditText
        android:id="@+id/edtGrams"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border_comment"
        android:ems="10"
        android:fontFamily="@font/hanken_grotesk"
        android:text="@string/meal_details_grams"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="345dp"
        android:layout_height="52dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/button_gradient_update"
        android:fontFamily="@font/hanken_grotesk_bold"
        android:text="@string/meal_details_update_meal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtWeight"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>